Fixing some styling issues and implementing FSDJump handler

--- a/src/app/services/system-info-handler/system-info-modal/system-modal.component.css
+++ b/src/app/services/system-info-handler/system-info-modal/system-modal.component.css
@@ -8,8 +8,9 @@
 
 .sub-header {
     font-size: 1.5vw;
+    overflow: hidden;
     white-space: nowrap;
-
+    text-overflow: ellipsis;
 }
 
 .scan-content {
